# MultiScaleSSPs

./: .gitignore  Makefile  README.md  pyproject.toml
data/: mn10_footprints.npz
examples/: learnable_kernel_tiers.md  learnable_kernel_tiers.py  star_ssp_mean.ipynb  validate_numpy.py
examples/old/: baseline_comparison.ipynb  hierarchical_building.ipynb  hierarchical_encoding.ipynb  hierarchical_encoding_v2.ipynb  multi_scale_learning.ipynb
results/bunny_kernel_fit/: params.msgpack
results/kernel_image_fit/: params.msgpack
results/scale_modulation/: metrics.csv
results/scale_modulation/id_map/: quadrant_id_map.csv
results/widgets/: ssp_gain_widget.html
scripts/: adaptive_fpe_lidar.py  bunny_3d_gifs.py  bunny_kernel_fit.py  bunny_scan_gif.py  compare_decode_errors.py  encode_labeled_scene.py  export_robotathome_carmen.py  fourier_occupancy.py  indoor_env.py  inspect_modelnet10.py  kernel_image_fit.py  make_scene_maps.py  make_ssp_gain_widget.py  quadrant_id_map_decode.py  quadrant_scale_modulation.py  room_id_scale_modulation.py  room_method_select.py  scene_gain_fit.py  shape_scale_modulation.py  ssp_encoding_animations.py  ssp_modulation_animation.py  visualize_room.py  visualize_ssp_lidar.py  visualize_ssp_object.py  visualize_vsa_baseline.py  vsa_bin_pruning.py
src/multiscalessps/: metrics.py
src/multiscalessps/data/: __init__.py  modelnet10.py  robotathome.py  scenes.py
src/multiscalessps/envs/: __init__.py  building.py  room.py
src/multiscalessps/models/: baseline.py
src/multiscalessps/ssps/: spspace.py  sspspace.py
