[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiscalessps"
version = "0.1.0"
description = "MultiScaleSSPs library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]
