[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiscalessps"
version = "0.1.0"
description = "MultiScaleSSPs library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "vsagym[jax]",
    "ipykernel",
    "jax[cuda13]",
    "optax",
    "trimesh>=4.12.2",
    "embreex>=4.4.0",
    "rtree>=1.4.1",
    "imageio>=2.37.3",
    "tqdm>=4.68.4",
    "imageio-ffmpeg>=0.6.0",
    "py7zr>=1.1.3",
    "plyfile>=1.1.4",
    "flax>=0.10.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
vsagym = { path = "vsa-gym-wrapper", editable = true }
